# fixmate

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
.just/: manage.just  script.just
fixmate/compose_checker/: cli.py
fixmate/dir_checker/: _dto.py  _empty_validator.py  _init_py_validator.py  cli.py  dir_checker.py
fixmate/helpers/: config_loader.py  dir_tools.py
fixmate/just_indexer/: cli.py  just_indexer.py
fixmate/python_checker/: _dto.py  _func_validator.py  _import_validator.py  _msg_validator.py  cli.py  python_checker.py
